--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,5 +7,5 @@ enable_testing()
 add_executable(keno src/main.cpp
                     src/Interface.cpp
                     src/Arquive.cpp
-                    #src/KenoBet.cpp
+                    src/KenoBet.cpp
                     )
